frontend_tests/negative/excluded_select/go.mod
module example.com/renvotests/negative/select

go 1.25
